# rc_Fe

./: .gitignore  .mcp.json  .prettierrc  Dockerfile.frontend  deploy.sh  docker-compose.prod.yml  nginx.conf  package.json  setup-letsencrypt.sh
.github/workflows/: build.yml
BE/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requiremnets.md
BE/app/: main.py
BE/app/api/v1/: router.py
BE/app/api/v1/dependencies/: __init__.py  auth.py  groups.py  permissions.py
BE/app/api/v1/endpoints/: assessments.py  auth.py  groups.py  tokens.py  users.py
BE/app/api/v1/schemas/requests/: assessment.py  auth.py  group.py  user.py
BE/app/api/v1/schemas/responses/: assessment.py  auth.py  group.py  token.py  user.py
BE/app/core/: config.py  database.py  hooks.py  security.py
BE/app/models/: __init__.py  assessment.py  base.py  enums.py  group.py  token.py  user.py
BE/app/services/: assessment.py  group.py  token.py  user.py
src/app/: globals.css  layout.tsx  not-found.tsx
src/app/(main)/: layout.tsx  page.tsx
src/components/: Sidebar.tsx
src/components/assessment/: AssessmentModal.tsx  AssessmentTable.tsx  SessionManagementModal.tsx
src/components/auth/: GoogleLoginButton.tsx
src/components/chatbot/: ChatBot.tsx  InputForm.tsx  MessageBubble.tsx
src/components/common/: AuthGuard.tsx  SearchAndFilterBar.tsx  (+1 more)
src/config/: index.ts
src/constants/: navigation.tsx
src/data/: mockReports.ts
src/providers/: react-query-provider.tsx
src/types/: report.ts  user.ts
(+42 files in other folders)
